# babfig

./: .fehbg  README.md  fdinfo.c  ą.c
.config/i3/: config
i3status.rs/: Cargo.toml  Makefile
i3status.rs/src/: getxkblayout.rs  main.rs
screen-rotator/: screen-rotator.cpp  toggle-screen-rotator.c
secureboot/: README  etc-dkms-framework.conf.d-get-pin.conf  setup.nss  setup.openssl  usr-local-libexec-dkms-sign-file  usr-local-libexec-dkms-sign-file-nss  usr-local-libexec-dkms-sign-helper
src/utmp/: 0001-Actually-trust-SHELL-and-all-others-like-the-manual-.patch  0002-Fix-manual-formatting.patch  0003-Fix-posix.c-comments.patch  0004-If-glibc-set-ut_session.patch  0005-Write-first-chunk-of-SSH_CLIENT-to-ut_host.patch  0006-Set-ut_exit-too.patch  0007-Write-first-chunk-of-SSH_CLIENT-to-ut_addr-on-glibc.patch  remote  remote-HEAD
