[package]
name = "i3status-rs"
description = "Start/stop KSM, for systemd. Based on https://github.com/osuosl/fedpkg-qemu/blob/603dd6670b5fbb851ceac54b4bc9a10ec82a9c9d/ksmctl.c"
repository = "https://github.com/nabijaczleweli/babctl"
license = "MIT"
version = "0.1.0"
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>"]


[profile.release]
lto = true


[dependencies]
libc = "0.2"
x11 = "2.18"
